--- a/app/templates/records/item_records.html
+++ b/app/templates/records/item_records.html
@@ -87,7 +87,7 @@
                         <th scope="col" class="text-muted small fw-bold text-uppercase py-3">借用人</th>
                         <th scope="col" class="text-muted small fw-bold text-uppercase py-3">开始时间</th>
                         <th scope="col" class="text-muted small fw-bold text-uppercase py-3">归还时间</th>
-                        <th scope="col" class="text-muted small fw-bold text-uppercase py-3">使用位置</th>
+                        <th scope="col" class="text-muted small fw-bold text-uppercase py-3">使用地点</th>
                         <th scope="col" class="text-center text-muted small fw-bold text-uppercase py-3">状态</th>
                     </tr>
                 </thead>
